[gd_scene load_steps=12 format=2]

[ext_resource path="res://AL/Levels/Obsticles/Breakable/Breakable.gd" type="Script" id=1]
[ext_resource path="res://AL/Tileset/Tileset_001.png" type="Texture" id=2]
[ext_resource path="res://AL/Core/Shaders/Tileset_Anim_H.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0
shader = ExtResource( 3 )
shader_param/frame_size = 8
shader_param/frames = 3
shader_param/anim_time = 0.5
_sections_unfolded = [ "shader_param" ]

[sub_resource type="Animation" id=2]

resource_name = "Broken"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Norm_Reg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Norm_Bright:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cracked:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Broken:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]

resource_name = "Cracked"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Norm_Reg:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Norm_Bright:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cracked:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Broken:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]

length = 3.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Broken:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cracked:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Norm_Bright:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Norm_Reg:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Norm_Bright:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2, 2.2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 4, 4 )

[sub_resource type="Gradient" id=6]

offsets = PoolRealArray( 0, 1 )
colors = PoolColorArray( 1, 0.265625, 0.265625, 1, 1, 0.671875, 0.671875, 0 )

[sub_resource type="GradientTexture" id=7]

flags = 4
gradient = SubResource( 6 )
width = 1024

[sub_resource type="ParticlesMaterial" id=8]

render_priority = 0
trail_divisor = 1
emission_shape = 1
emission_sphere_radius = 4.0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 180.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.0
initial_velocity_random = 0.25
angular_velocity = 60.0
angular_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 100.0
radial_accel_random = 0.0
tangential_accel = 100.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.5
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color_ramp = SubResource( 7 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Damping", "Initial Velocity", "Radial Accel", "Tangential Accel" ]

[node name="Breakable_Red" type="Node2D" index="0"]

script = ExtResource( 1 )
state = null

[node name="Norm_Reg" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 8, 8, 8, 8 )
_sections_unfolded = [ "Visibility" ]

[node name="Norm_Bright" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 8, 32, 8, 8 )
_sections_unfolded = [ "Visibility" ]

[node name="Cracked" type="Sprite" parent="." index="2"]

visible = false
material = SubResource( 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 48, 8, 8 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="Broken" type="Sprite" parent="." index="3"]

visible = false
material = SubResource( 1 )
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 24, 48, 8, 8 )
_sections_unfolded = [ "Material", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]

root_node = NodePath("..")
autoplay = "Normal"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Broken = SubResource( 2 )
anims/Cracked = SubResource( 3 )
anims/Normal = SubResource( 4 )
blend_times = [  ]

[node name="Body" type="KinematicBody2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 4, 4 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]

[node name="Ray_Left" type="RayCast2D" parent="Body" index="0"]

enabled = true
exclude_parent = true
cast_to = Vector2( -5, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="Ray_Right" type="RayCast2D" parent="Body" index="1"]

enabled = true
exclude_parent = true
cast_to = Vector2( 5, 0 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body" index="2"]

shape = SubResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Particles2D" type="Particles2D" parent="." index="6"]

position = Vector2( 4, 4 )
emitting = false
amount = 25
lifetime = 0.4
one_shot = true
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = false
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 8 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Time" ]


